--- a/aboutus.html
+++ b/aboutus.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@700&display=swap"
+    rel="stylesheet" />
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <section class="about-us" id="about-us">
@@ -12,31 +17,33 @@
             <li class="about-us-item">
               <picture>
                 <source srcset="../images/Aboutus/desktop1.jpg, ../images/Aboutus/desktop1-2x.jpg" 
-                media="(min-width: 1200px)"/>
+                media="(min-width: 1280px)"/>
                 <source srcset="../images/Aboutus/desktop1.webp, ../images/Aboutus/desktop1-2x.webp 2x" 
-                type="image/webp" media="(min-width: 1200px)" />
+                type="image/webp" media="(min-width: 1280px)" />
                 <source srcset="../images/Aboutus/tablet1.jpg, ../images/Aboutus/tablet1-2x.jpg 2x"
-                media="(min-width: 767px)"/>
+                media="(min-width: 768px)"/>
                 <source srcset="../images/Aboutus/tablet1.webp, ../images/Aboutus/tablet1-2x.webp 2x"
-                type="image/webp" media="(min-width: 767px)"/>
+                type="image/webp" media="(min-width: 768px)"/>
               <img src="../images/Aboutus/desktop1.jpg" alt="Фото о нас" />
-              </picture>
+             </picture>
             </li>
+            <li class="about-us-item">
             <picture>
               <source srcset="../images/Aboutus/desktop2.jpg, ../images/Aboutus/desktop2-2x.jpg" 
-              media="(min-width: 1200px)"/>
+              media="(min-width: 1280px)"/>
               <source srcset="../images/Aboutus/desktop2.webp, ../images/Aboutus/desktop2-2x.webp 2x" 
-              type="image/webp" media="(min-width: 1200px)" />
+              type="image/webp" media="(min-width: 1280px)" />
               <source srcset="../images/Aboutus/tablet2.jpg, ../images/Aboutus/tablet1-2x.jpg 2x"
-              media="(min-width: 767px)"/>
+              media="(min-width: 768px)"/>
               <source srcset="../images/Aboutus/tablet2.webp, ../images/Aboutus/tablet2-2x.webp 2x"
-              type="image/webp" media="(min-width: 767px)"/>
+              type="image/webp" media="(min-width: 768px)"/>
             <img src="../images/Aboutus/desktop2.jpg" alt="Фото о нас" />
             </picture>
+            </li>
             </ul>
-          <div>
+          <div class="aboutus-info">
             <p class="section-description">О НАС</p>
-            <h2 class="section-title">Лучший Барбершоп твоего города</h2>
+            <h2 class="section-title">Лучший Барбершоп<br/> твоего города</h2>
             <p class="description-text">
               Если ты хочешь добавить в свой образ больше уверенности – тебе точно к
               нам.
